mechanical code quality improvements